--- a/Live Project/style.css
+++ b/Live Project/style.css
@@ -97,7 +97,7 @@ body {
   display: flex;
   background-position: center;
   min-height: 710px;
-  background-image:
+  background-image:linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
     url(https://assets.nflxext.com/ffe/siteui/vlv3/a1dc92ca-091d-4ca9-a05b-8cd44bbfce6a/f9368347-e982-4856-a5a4-396796381f28/RS-en-20191230-popsignuptwoweeks-perspective_alpha_website_large.jpg);
 
 }
