--- a/Live Project/style.css
+++ b/Live Project/style.css
@@ -212,6 +212,18 @@ body {
   left: 49.6%;
   transform: translate(-50%, -50%)
 }
+.TV .video1 {
+  /* z-index: -1; */
+  overflow: hidden;
+  width: 100%;
+  height: 100%;
+  max-width: 73%;
+  max-height: 54%;
+  position: absolute;
+  top: 47.7%;
+  left: 49.6%;
+  transform: translate(-50%, -50%)
+}
 
 .video video {
   display: inline-block;
