--- a/Disney push Hotstar/style.css
+++ b/Disney push Hotstar/style.css
@@ -6,10 +6,10 @@
   src: local(""),
     url("../fonts/roboto-v30-latin-regular.eot?#iefix")
       format("embedded-opentype"),
-    /* IE6-IE8 */ url("../fonts/roboto-v30-latin-regular.woff2") format("woff2"),
+    /* IE6-IE8 */ url("./fonts/roboto-v30-latin-regular.woff2") format("woff2"),
     /* Super Modern Browsers */ url("../fonts/roboto-v30-latin-regular.woff")
       format("woff"),
-    /* Modern Browsers */ url("../fonts/roboto-v30-latin-regular.ttf")
+    /* Modern Browsers */ url("./fonts/roboto-v30-latin-regular.ttf")
       format("truetype"),
     /* Safari, Android, iOS */
       url("../fonts/roboto-v30-latin-regular.svg#Roboto") format("svg"); /* Legacy iOS */
@@ -504,12 +504,261 @@ footer {
   font-weight: bold;
   font-size: 14px;
   transition: color 0.3s ease-in-out;
+  
 }
-
+/* 
 .quick-links-content ul li a:hover {
   color: #45a049;
 }
 
 .quick-links-content ul li:hover {
   transform: translateX(5px);
+} */
+
+/* //updated ver */
+* {
+  box-sizing:border-box;
+}
+@import url(https://fonts.googleapis.com/css?family=Lato:400,700);
+body { 
+
+  font-family:'Lato';
+}
+.heading-primary {
+  font-size:2em;
+  padding:2em;
+  text-align:center;
+}
+.accordion dl,
+.accordion-list {
+   border:1px solid #ddd;
+   &:after {
+       content: "";
+       display:block;
+       height:1em;
+       width:100%;
+       background-color:darken( #0c111b, 10%);
+     }
+}
+.accordion dd,
+.accordion__panel {
+   background-color:#eee;
+   font-size:1em;
+   line-height:1.5em; 
+}
+.accordion p {
+  padding:1em 2em 1em 2em;
+}
+
+.accordion {
+    position:relative;
+    background-color:#eee;
+}
+.container {
+  max-width:960px;
+  margin:0 auto;
+  padding:2em 0 2em 0;
+}
+.accordionTitle,
+.accordion__Heading {
+ background-color:#0c111b; 
+   text-align:center;
+     font-weight:700; 
+          padding:2em;
+          display:block;
+          text-decoration:none;
+          color:#fff;
+          transition:background-color 0.5s ease-in-out;
+  border-bottom:1px solid darken(#38cc70, 5%);
+  &:before {
+   content: "+";
+   font-size:1.5em;
+   line-height:0.5em;
+   float:left; 
+   transition: transform 0.3s ease-in-out;
+  }
+  &:hover {
+    background-color:darken(#38cc70, 10%);
+  }
+}
+.accordionTitleActive, 
+.accordionTitle.is-expanded {
+   background-color:darken(#38cc70, 10%);
+    &:before {
+     
+      transform:rotate(-225deg);
+    }
+}
+.accordionItem {
+    height:auto;
+    overflow:hidden; 
+    /*SHAME: magic number to allow the accordion to animate*/
+    
+     max-height:50em;
+    transition:max-height 1s;   
+ 
+    
+    @media screen and (min-width:48em) {
+         max-height:15em;
+        transition:max-height 0.5s
+        
+    }
+    
+   
+}
+ 
+.accordionItem.is-collapsed {
+    max-height:0;
+}
+.no-js .accordionItem.is-collapsed {
+  max-height: auto;
+}
+.animateIn {
+     animation: accordionIn 0.45s normal ease-in-out both 1; 
+}
+.animateOut {
+     animation: accordionOut 0.45s alternate ease-in-out both 1;
+}
+@keyframes accordionIn {
+  0% {
+    opacity: 0;
+    transform:scale(0.9) rotateX(-60deg);
+    transform-origin: 50% 0;
+  }
+  100% {
+    opacity:1;
+    transform:scale(1);
+  }
+}
+
+@keyframes accordionOut {
+    0% {
+       opacity: 1;
+       transform:scale(1);
+     }
+     100% {
+          opacity:0;
+           transform:scale(0.9) rotateX(-60deg);
+       }
+}
+
+
+#imgd{
+  height: 200px;
+  width: 450px;
+  /* margin: 10px; */
+}
+#imgd1{
+  height: 200px;
+  width: 450px;
+  margin-bottom: auto;
+}
+
+#particle{
+  width: 100%;
+  height: 10%;
+  #canvas1 {
+    background-color: black;
+    width: 100%;
+    height: 10%;
+    top: 0;
+    left: 0;
+  }
+}
+
+#accordion3{
+  display: flex;
+  justify-content: space-around;
+  /* background-color: #38cc70; */
+}
+
+
+
+
+
+/* particles */
+
+
+/* html, body {
+	margin: 0;	
+	padding: 0;
+}
+
+body {
+	background: #171717;
+	color: #999;
+	font: 100%/18px helvetica, arial, sans-serif;
+} */
+
+a {
+	color: #2fa1d6;
+	font-weight: bold;
+	text-decoration: none;
+}
+
+a:hover {
+	color: #fff;	
+}
+
+#canvas-container {
+	background: #000 url(https://jackrugile.com/lab/fireworks-v2/images/bg.jpg);
+  height: 400px;
+	left: 40%;
+	margin: -200px 0 0 -300px;
+	position: absolute;
+	top: 100%;
+  width: 1000px;
+	z-index: 2;
+}
+		
+canvas {
+	cursor: crosshair;
+	display: block;
+	position: relative;
+	z-index: 3;
+}
+
+canvas:active {
+	cursor: crosshair;
+}
+
+#skyline {
+	background: url(https://jackrugile.com/lab/fireworks-v2/images/skyline.png) repeat-x 50% 0;
+	bottom: 0;
+	height: 135px;
+	left: 0;
+	position: absolute;
+	width: 100%;
+	z-index: 1;	
+}
+
+#mountains1 {
+	background: url(https://jackrugile.com/lab/fireworks-v2/images/mountains1.png) repeat-x 40% 0;
+	bottom: 0;
+	height: 200px;
+	left: 0;
+	position: absolute;
+	width: 100%;
+	z-index: 1;	
+}
+
+#mountains2 {
+	background: url(https://jackrugile.com/lab/fireworks-v2/images/mountains2.png) repeat-x 30% 0;
+	bottom: 0;
+	height: 250px;
+	left: 0;
+	position: absolute;
+	width: 100%;
+	z-index: 1;	
+}
+
+#gui {
+	right: 0;
+	/* position: fixed; */
+	top: 80vh;
+	z-index: 3;
+}
+
+#test{
+
 }
