--- a/CASINO/style.css
+++ b/CASINO/style.css
@@ -1,4 +1,474 @@
-/* .logo-i{
-    height: 80px;
-    width: 80px;
-} */
+*{
+    margin: 0;
+    padding: 0;
+}
+body{
+    background-color: rgb(19, 38, 50) !important;
+}
+.navbar {
+	z-index: 9999;
+	background-color: rgb(19, 38, 50);
+	box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.659);
+	/* border: 1px solid rgb(255, 0, 0); */
+	height: 70px;
+    display: inline;
+    
+  }
+  
+  
+  #nav-bar ul li:hover::after {
+	width: 100%;
+  }
+  
+  #nav-bar ul li::after {
+	content: '';
+	position: absolute;
+	left: 0;
+	bottom: 0;
+	height: 3px;
+	background: red;
+	width: 0;
+	transition: width 0.2s;
+  }
+  
+  .logo{
+	height: 110px;
+	width: 190px;
+	margin: -30px;
+	margin-left: 20px;
+	
+  }
+  
+  .navbar-right li a {
+       color: rgb(124, 124, 124) ;
+	   margin-top: 7.5px;
+  }
+  
+  .navbar-right li a:hover{
+	color: red !important;
+
+  }
+
+  *{
+	margin:0;
+	padding:0;
+}
+
+body{
+	font-family:'Arial', sans-serif;
+	font-size:14px;
+	/* color:#fff;
+	background:#ffffff; */
+	line-height:1.6em;
+}
+
+a{
+	color:#fff;
+	text-decoration:none;
+}
+
+h1{
+	text-align:center;
+	margin-bottom:20px;
+}
+
+#container{
+	width:80%;
+	margin:40px auto;
+}
+
+p{
+	margin:0;
+	padding:0 35px 0 0;
+}
+
+#slider{
+	width:100%;
+	height:350px;
+	position:relative;
+	overflow:hidden;
+	float:left;
+	padding:0;
+	border-radius:5px;
+    margin-top: 3%;
+}
+
+#slider img{
+	width:940px;
+	height:350px;
+}
+
+.img1, .img2, .img3, .img4, .img5 {
+	width:100%;
+	margin:0;
+	padding:0;
+} 
+
+
+.slide{
+	position:absolute;
+	width:100%;
+	height:100%;
+}
+
+.slide-copy{
+	position:absolute;
+	bottom:0;
+	left:0;
+	background:7f7f7f;
+	/* background: rgba(0,0,0,0.5); */
+	width:100%;
+	max-height:32%;
+}
+
+.arrow-right {
+	width: 0; 
+	height: 0; 
+	border-top: 15px solid transparent;
+	border-bottom: 15px solid transparent;	
+	border-left: 15px solid #fff;
+	position:relative;
+	top:20%;
+	right:-40%;
+}
+
+.arrow-left {
+	width: 0; 
+	height: 0; 
+	border-top: 15px solid transparent;
+	border-bottom: 15px solid transparent;	
+	border-right:15px solid #fff; 
+	position:relative;
+	top:20%;
+	left:30%;
+}
+.game-s{
+	height: 500px;
+	width: 100%;
+	margin-top: -245px;
+}
+
+
+
+.game-s{
+	width: 100% !important;
+}
+
+.slide{
+	border: none !important;
+}
+
+
+
+@import "compass/css3";
+
+/* Slider */
+
+.slick-slider {
+	
+    position: relative;
+    display: block;
+    box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    -ms-touch-action: none;
+    touch-action: none;
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+}
+
+.slick-list {
+    position: relative;
+    overflow: hidden;
+    display: block;
+    margin: 0;
+    padding: 0;
+    &:focus {
+        outline: none;
+    }
+    .slick-loading & {
+        background: white url(./ajax-loader.gif) center center no-repeat;
+    }
+    &.dragging {
+        cursor: pointer;
+        cursor: hand;
+    }
+}
+
+.slick-slider .slick-list,
+.slick-track,
+.slick-slide,
+.slick-slide img {
+    -webkit-transform: translate3d(0, 0, 0);
+    -moz-transform: translate3d(0, 0, 0);
+    -ms-transform: translate3d(0, 0, 0);
+    -o-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+}
+
+.slick-track {
+    position: relative;
+    left: 0;
+    top: 0;
+    display: block;
+    zoom: 1;
+    &:before,
+    &:after {
+        content: "";
+        display: table;
+    }
+    &:after {
+        clear: both;
+    }
+    .slick-loading & {
+        visibility: hidden;
+    }
+}
+
+.slick-slide {
+    float: left;
+    height: 100%;
+    min-height: 1px;
+    img {
+        display: block;
+        &.slick-loading {
+            background: white url(./ajax-loader.gif) center center no-repeat;
+            padding-bottom: 100%;
+        }
+    }
+    display: none;
+    &.dragging img {
+        pointer-events: none;
+    }
+    .slick-initialized & {
+        display: block;
+    }
+    .slick-loading & {
+        visibility: hidden;
+    }
+    .slick-vertical & {
+        display: block;
+        height: auto;
+        border: 1px solid transparent;
+    }
+}
+
+/* Icons */
+
+
+@font-face {
+    font-family: "slick";
+    src: url("./fonts/slick.eot");
+    src: url("./fonts/slick.eot?#iefix") format("embedded-opentype"), url("./fonts/slick.woff") format("woff"), url("./fonts/slick.ttf") format("truetype"), url("./fonts/slick.svg#slick") format("svg");
+    font-weight: normal;
+    font-style: normal;
+}
+
+
+/* Arrows */
+
+.slick-prev,
+.slick-next {
+    position: absolute;
+    display: block;
+    height: 20px;
+    width: 20px;
+    line-height: 0;
+    font-size: 0;
+    cursor: pointer;
+    background: transparent;
+    color: transparent;
+    top: 50%;
+    margin-top: -10px;
+    padding: 0;
+    border: none;
+    outline: none;
+    &:focus {
+        outline: none;
+    }
+    &.slick-disabled:before {
+        opacity: 0.25;
+    }
+}
+
+.slick-prev:before, .slick-next:before {
+    font-family: "slick";
+    font-size: 20px;
+    line-height: 1;
+    color: rgb(0, 0, 0);
+    opacity: 0.85;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
+
+.slick-prev {
+    left: -25px;
+    &:before {
+        content: '\2190';
+    }
+}
+
+.slick-next {
+    right: -25px;
+    &:before {
+        content: '\2192';
+    }
+}
+
+/* Dots */
+
+.slick-slider {
+    margin-bottom: 30px;
+}
+
+.slick-dots {
+    position: absolute;
+    bottom: -45px;
+    list-style: none;
+    display: block;
+    text-align: center;
+    padding: 0px;
+    width: 100%;
+    li {
+        position: relative;
+        display: inline-block;
+        height: 20px;
+        width: 20px;
+        margin: 0px 5px;
+        padding: 0px;
+        cursor: pointer;
+        button {
+            border: 0;
+            background: transparent;
+            display: block;
+            height: 20px;
+            width: 20px;
+            outline: none;
+            line-height: 0;
+            font-size: 0;
+            color: transparent;
+            padding: 5px;
+            cursor: pointer;
+            outline: none;
+            &:focus {
+                outline: none;
+            }
+            &:before {
+                position: absolute;
+                top: 0;
+                left: 0;
+                content: '\2022';
+                width: 20px;
+                height: 20px;
+                font-family: "slick";
+                font-size: 6px;
+                line-height: 20px;
+                text-align: center;
+                color: black;
+                opacity: 0.25;
+                -webkit-font-smoothing: antialiased;
+                -moz-osx-font-smoothing: grayscale;
+            }
+        }
+        &.slick-active button:before {
+            opacity: 0.75;
+        }
+    }
+}
+
+.content {
+    width: 80%;
+    margin: auto;
+}
+
+.blue, html {
+
+
+    h3 {
+		
+        background: #fff;
+        color: #3498db;
+        font-size: 36px;
+        line-height: 100px;
+        margin: 10px;
+        padding: 2%;
+        position: relative;
+        text-align: center;
+        border: 1px solid #999;
+
+    }
+}
+
+
+/* Dots */
+
+.slick-slider {
+    margin-bottom: 30px;
+}
+
+.slick-dots {
+    position: absolute;
+    bottom: -45px;
+    list-style: none;
+    display: block;
+    text-align: center;
+    padding: 0px;
+    width: 100%;
+    li {
+        position: relative;
+        display: inline-block;
+        height: 20px;
+        width: 20px;
+        margin: 0px 5px;
+        padding: 0px;
+        cursor: pointer;
+        button {
+            border: 0;
+            background: transparent;
+            display: block;
+            height: 20px;
+            width: 20px;
+            outline: none;
+            line-height: 0;
+            font-size: 0;
+            color: transparent;
+            padding: 5px;
+            cursor: pointer;
+            outline: none;
+            &:focus {
+                outline: none;
+            }
+            &:before {
+                position: absolute;
+                top: 0;
+                left: 0;
+                content: '\2022';
+                width: 20px;
+                height: 20px;
+                font-family: "slick";
+                font-size: 20px;
+                line-height: 20px;
+                text-align: center;
+                color: white;
+                opacity: 0.25;
+                -webkit-font-smoothing: antialiased;
+                -moz-osx-font-smoothing: grayscale;
+            }
+        }
+        &.slick-active button:before {
+            opacity: 0.75;
+        }
+    }
+}
+
+.m-img{
+    width: 100wh;
+
+}
+.m-img img{
+    width:100%;
+}
