--- a/CASINO/style.css
+++ b/CASINO/style.css
@@ -3,11 +3,11 @@
     padding: 0;
 }
 body{
-    background-color: rgb(19, 38, 50) !important;
+    background-color: rgb(0, 0, 0) !important;
 }
 .navbar {
 	z-index: 9999;
-	background-color: rgb(19, 38, 50);
+	background-color: rgb(0, 0, 0);
 	box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.659);
 	/* border: 1px solid rgb(255, 0, 0); */
 	height: 70px;
@@ -45,7 +45,10 @@ body{
   }
   
   .navbar-right li a:hover{
-	color: red !important;
+    background-image: linear-gradient(red 20%,gold 80%) !important;
+            -webkit-background-clip: text !important;
+            color: transparent !important;
+	/* color: red !important; */
 
   }
 
