--- a/HTML,CSS,BOOTSRTAP/Play Store /style.css
+++ b/HTML,CSS,BOOTSRTAP/Play Store /style.css
@@ -23,7 +23,7 @@
 
 body {
   width: 100%;
-  background: #0c111b;
+  background: #4180ff !important;
   position: relative;
   font-family: "Roboto", sans-serif;
 }
