--- a/JAVASCRIPT/Hire Employee/style.css
+++ b/JAVASCRIPT/Hire Employee/style.css
@@ -96,11 +96,11 @@ input[type="number"]:focus {
 
 #total_emp,
 #total_salary {
-    background-color: #ffee00;
+    background-color: #00bfff;
 }
 
 tr {
-    background-color: #ffee00;
+    background-color: #00a6ff;
     border:2px solid rgb(0, 0, 0);
      border:-cellspacing 5px ;
      border: -cellpadding 10px;
@@ -108,7 +108,7 @@ tr {
 }
 
 #head{
-    background-color:rgb(255, 140, 0);
+    background-color:rgb(0, 195, 255);
 }
 
 th,
@@ -121,7 +121,7 @@ td {
 th {
     font-size: 20px;
     height: 50px;
-    background-color: #ffee00;
+    background-color: #0099ff;
     border: 1px solid rgb(0, 0, 0);
 }
 
