--- a/JAVASCRIPT/from Exam/style.css
+++ b/JAVASCRIPT/from Exam/style.css
@@ -8,7 +8,7 @@ body {
     left: 0;
     top: 0;
     width: 100%;
-    height: 100vh;
+    height: 100%;
     animation: animation 16s ease-in-out infinite;
     background-size: cover;
 }
@@ -18,7 +18,7 @@ body {
     left: 0;
     top: 0;
     width: 100%;
-    height: 100vh;
+    height: 100%;
     background-color: rgba(28, 28, 28, 0.5);
 }
 
@@ -28,10 +28,10 @@ body {
     top: 50%;
     transform: translate(-50%, -50%);
     text-align: center;
-    width: 45%;
-    margin: 50px auto;
+    width: 30%;
+    margin: 30px auto;
     background-color: rgba(252, 154, 154, 0.2);
-    padding: 50px;
+    padding: 30px;
     margin: auto;
     border: 2px solid rgb(255, 0, 0);
     border-radius: 40px;
@@ -43,14 +43,22 @@ label {
     font-size: x-large;
 }
 
-#Employee_info {
-    margin: auto;
-}
 
 #salary {
-    width: 95%;
-    margin: 10px;
-    padding: 10px 0;
+    height: 100% ;
+    width: 90%; 
+     margin: 5px;
+    padding: 5px ;
+}
+
+input{
+    height: 21px !important;
+}
+button{
+    height: 33px !important;
+    width: 40% !important;
+    margin-top: 5% !important;
+    border-radius: 17% !important;
 }
 
 @keyframes animation {
