--- a/JAVASCRIPT/Food Final Exam/FOOD App/ css/Login.css
+++ b/JAVASCRIPT/Food Final Exam/FOOD App/ css/Login.css
@@ -2,7 +2,7 @@ body {
     overflow: hidden;
     margin: 0;
     padding: 0;
-    background-image: url('https://png.pngtree.com/background/20210709/original/pngtree-business-technology-digital-high-tech-world-background-picture-image_957454.jpg');
+    background-image: url('https://t4.ftcdn.net/jpg/02/92/20/37/360_F_292203735_CSsyqyS6A4Z9Czd4Msf7qZEhoxjpzZl1.jpg');
     background-size: cover;
     font-family: Arial, sans-serif;
     background-repeat: no-repeat;
@@ -14,8 +14,8 @@ body {
     align-items: center;
     margin: auto;
     position: absolute;
-    top: 21%;
-    left: 50%;
+    top: 38%;
+    left: 43%;
     background-color: rgb(168, 168, 168 , 0.5);
     height: 280px;
     width: 390px;
