--- a/JAVASCRIPT/Food Final Exam/FOOD App/ css/SignUp.css
+++ b/JAVASCRIPT/Food Final Exam/FOOD App/ css/SignUp.css
@@ -1,6 +1,6 @@
 body {
     overflow: hidden;
-    background-image: url('https://png.pngtree.com/background/20210709/original/pngtree-business-technology-digital-high-tech-world-background-picture-image_957454.jpg');
+    background-image: url('https://t4.ftcdn.net/jpg/02/92/20/37/360_F_292203735_CSsyqyS6A4Z9Czd4Msf7qZEhoxjpzZl1.jpg');
     background-size: cover;
     height: 100%;
     width: 100%;
@@ -14,8 +14,8 @@ body {
     align-items: center;
     margin: auto;
     position: absolute;
-    top: 13.5%;
-    left: 50%;
+    top: 32.5%;
+    left: 40%;
     background-color: rgb(168, 168, 168 , 0.5);
     height: 450px;
     width: 450px;
