--- a/JAVASCRIPT/Food Final Exam/FOOD App/ css/style.css
+++ b/JAVASCRIPT/Food Final Exam/FOOD App/ css/style.css
@@ -1,5 +1,6 @@
 body {
     background-color: rgba(176, 173, 173, 0.472);
+    width: 100% !important;
 }
 
 #main {
@@ -61,7 +62,7 @@ body {
 
 #img {
     height: 200px;
-    width: 160px;
+    width: 200px;
     border-radius: 10px;
 }
 
@@ -73,7 +74,7 @@ body {
 
 #show_data {
     display: grid;
-    grid-template-columns: repeat(6, 1fr);
+    grid-template-columns: repeat(5, 1fr);
     gap: 20px;
     margin-top: 20px;
     height: 600px;
@@ -82,8 +83,8 @@ body {
 }
 
 #box {
-    width: 300px;
-    height: 440px;
+    width: 260px;
+    height: 380px;
     border-style: solid;
     border-radius: 10px 0px 10px 0px;
     padding: 15px;
