--- a/JAVASCRIPT/Food Final Exam/FOOD App/ css/style.css
+++ b/JAVASCRIPT/Food Final Exam/FOOD App/ css/style.css
@@ -21,7 +21,7 @@ body {
     margin-bottom: 20px;
 }
 
-#news_img_div {
+#Food_img_div {
     display: flex;
     justify-content: center;
     margin-bottom: 20px;
