--- a/JAVASCRIPT/E-Learning/css/style.css
+++ b/JAVASCRIPT/E-Learning/css/style.css
@@ -5,3 +5,12 @@ body {
     max-width: 600px;
     margin-top: 50px;
 }
+
+
+.Cource{
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    gap: 20px;
+    margin-top: 20px;
+ padding: 50px;
+}
