--- a/JAVASCRIPT/Final Project/style.css
+++ b/JAVASCRIPT/Final Project/style.css
@@ -1,101 +1,3 @@
-
-
-:root {
-
-  /**
-   * colors
-   */
-
-  --maximum-blue-green: hsl(11, 100%, 50%);
-  --selective-yellow: hsl(42, 98%, 55%);
-  --eerie-black_70: hsla(240, 1%, 14%, 0.7);
-  --granite-gray: hsl(0, 0%, 40%);
-  --spanish-gray: hsl(0, 0%, 57%);
-  --oxford-blue: hsl(243, 95%, 8%);
-  --eerie-black: hsl(214, 10%, 14%);
-  --xiketic: #ffffff;
-  --white-1: hsl(0, 0%, 0%);
-  --white-2: hsl(0, 0%, 0%);
-  --white_10: hsla(0, 0%, 100%, 0.1);
-  --jet: hsl(225, 4%, 21%);
-
-  /**
-   * typography
-   */
-
-  --ff-work-sans: 'Work Sans', sans-serif;
-  --ff-jost: 'Jost', sans-serif;
-
-  --fs-1: 3.2rem;
-  --fs-2: 2.4rem;
-  --fs-3: 2.2rem;
-  --fs-4: 2rem;
-  --fs-5: 1.8rem;
-  --fs-6: 1.4rem;
-  --fs-7: 1.3rem;
-  --fs-8: 1rem;
-
-  --fw-400: 400;
-  --fw-500: 500;
-  --fw-700: 700;
-
-  /**
-   * spacing
-   */
-
-  --section-padding: 60px;
-
-  /**
-   * radius
-   */
-
-  --radius-circle: 50%;
-  --radius-pill: 200px;
-
-  /**
-   * transition
-   */
-
-  --transition-1: 0.25s ease;
-  --transition-2: 0.5s ease;
-  --cubic-in: cubic-bezier(0.51, 0.03, 0.64, 0.28);
-  --cubic-out: cubic-bezier(0.33, 0.85, 0.4, 0.96);
-  --cubic-anim: cubic-bezier(0.455, 0.030, 0.515, 0.955);
-
-}
-
-
-
-
-
-/*-----------------------------------*\
-  #RESET
-\*-----------------------------------*/
-
-*,
-*::before,
-*::after {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-li { list-style: none; }
-
-a,
-img,
-span,
-time,
-data,
-input,
-button,
-ion-icon { display: block; }
-
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
 .activ
 {
   color: orangered;
@@ -141,14 +43,6 @@ body {
 
 ::-webkit-scrollbar-thumb { background-color: orangered; border-radius: 50px;}
 
-
-
-
-
-
-/*-----------------------------------*\
-  #REUSED STYLE
-\*-----------------------------------*/
 
 .container { padding-inline: 15px; }
 
@@ -396,7 +290,7 @@ body {
   right: -8px;
   background-color: rgb(255, 42, 27);
   font-family: 'Courier New', Courier, monospace;
-  color: white;
+  color: white !important;
   font-size: var(--fs-8);
   min-width: 18px;
   min-height: 18px;
@@ -1303,4 +1197,95 @@ body {
     color: #ffffff;
   }
 
+}
+
+
+:root {
+
+
+  --maximum-blue-green: hsl(11, 100%, 50%);
+  --selective-yellow: hsl(42, 98%, 55%);
+  --eerie-black_70: hsla(240, 1%, 14%, 0.7);
+  --granite-gray: hsl(0, 0%, 40%);
+  --spanish-gray: hsl(0, 0%, 57%);
+  --oxford-blue: hsl(243, 95%, 8%);
+  --eerie-black: hsl(214, 10%, 14%);
+  --xiketic: #ffffff;
+  --white-1: hsl(0, 0%, 0%);
+  --white-2: hsl(0, 0%, 0%);
+  --white_10: hsla(0, 0%, 100%, 0.1);
+  --jet: hsl(225, 4%, 21%);
+
+
+  --ff-work-sans: 'Work Sans', sans-serif;
+  --ff-jost: 'Jost', sans-serif;
+
+  --fs-1: 3.2rem;
+  --fs-2: 2.4rem;
+  --fs-3: 2.2rem;
+  --fs-4: 2rem;
+  --fs-5: 1.8rem;
+  --fs-6: 1.4rem;
+  --fs-7: 1.3rem;
+  --fs-8: 1rem;
+
+  --fw-400: 400;
+  --fw-500: 500;
+  --fw-700: 700;
+
+  /**
+   * spacing
+   */
+
+  --section-padding: 60px;
+
+  /**
+   * radius
+   */
+
+  --radius-circle: 50%;
+  --radius-pill: 200px;
+
+  /**
+   * transition
+   */
+
+  --transition-1: 0.25s ease;
+  --transition-2: 0.5s ease;
+  --cubic-in: cubic-bezier(0.51, 0.03, 0.64, 0.28);
+  --cubic-out: cubic-bezier(0.33, 0.85, 0.4, 0.96);
+  --cubic-anim: cubic-bezier(0.455, 0.030, 0.515, 0.955);
+
+}
+
+
+
+
+
+/*-----------------------------------*\
+  #RESET
+\*-----------------------------------*/
+
+*,
+*::before,
+*::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+li { list-style: none; }
+
+a,
+img,
+span,
+time,
+data,
+input,
+button,
+ion-icon { display: block; }
+
+a {
+  color: inherit;
+  text-decoration: none;
 }
